--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,15 +1,12 @@
-FROM mcr.microsoft.com/devcontainers/base:ubuntu
+FROM mcr.microsoft.com/devcontainers/javascript-node:1-22-bookworm
 
-# MySQLインストール
-RUN apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y mysql-server && \
-    rm -rf /var/lib/apt/lists/*
+# [Optional] Uncomment this section to install additional OS packages.
+# RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+#     && apt-get -y install --no-install-recommends <your-package-list-here>
 
-# MySQL設定
-RUN echo "ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY 'password';" > /tmp/init.sql && \
-    chmod +x /tmp/init.sql
+# [Optional] Uncomment if you want to install an additional version of node using nvm
+# ARG EXTRA_NODE_VERSION=10
+# RUN su node -c "source /usr/local/share/nvm/nvm.sh && nvm install ${EXTRA_NODE_VERSION}"
 
-# MySQLが起動する状態でコンテナに入るための設定
-RUN mkdir -p /var/run/mysqld && \
-    chown -R mysql:mysql /var/run/mysqld && \
-    chmod 755 /var/run/mysqld
+# [Optional] Uncomment if you want to install more global node modules
+# RUN su node -c "npm install -g <your-package-list-here>"
