--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,10 +15,10 @@
 	"forwardPorts": [3000, 3306],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": {
-    "npm install",
-    "sudo service mysql start"
-  },
+	"postCreateCommand": [
+                "npm install",
+                "sudo service mysql start"
+	],
 
 	// Configure tool-specific properties.
 	"customizations": {
@@ -27,7 +27,7 @@
 				"streetsidesoftware.code-spell-checker"
 			]
 		}
-	}
+	},
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	"remoteUser": "root"
